hphp/hack/test/typecheck/inout/bad_inout_use_lvalue9.php
<?hh // strict

function f(inout array<int> $a): void {}

function test(int $x, int $y): void {
  f(inout tuple($x, $y));
}
